feat(serverless.yml): add support for app-controller

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,7 +13,11 @@ functions:
     events:
       - http:
           method: any
-          path: /{any+}
+          path: /{proxy+}
+          cors: true
+      - http:
+          method: any
+          path: /
           cors: true
 
 provider:
