--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: tasks-management-api-dev
+service: tasks-management-api
 
 frameworkVersion: '3'
 
@@ -40,8 +40,8 @@ provider:
             - 'dynamodb:PutItem'
             - 'dynamodb:UpdateItem'
             - 'dynamodb:DeleteItem'
-          Resource: arn:aws:dynamodb:us-east-2:*:table/TasksTable
-  region: us-east-2
+          Resource: arn:aws:dynamodb:us-east-1:*:table/TasksTable
+  region: us-east-1
 
 custom:
   esbuild:
